@@ -21,9 +21,9 @@ import static se.sundsvall.casedata.TestUtil.createStatusDTO;
 import static se.sundsvall.casedata.TestUtil.getRandomOffsetDateTime;
 import static se.sundsvall.casedata.apptest.util.TestConstants.JWT_HEADER_VALUE;
 import static se.sundsvall.casedata.apptest.util.TestConstants.PARKING_PERMIT_START_URL;
-import static se.sundsvall.casedata.integration.db.model.enums.CaseType.LOST_PARKING_PERMIT;
-import static se.sundsvall.casedata.integration.db.model.enums.CaseType.PARKING_PERMIT;
-import static se.sundsvall.casedata.integration.db.model.enums.CaseType.PARKING_PERMIT_RENEWAL;
+import static se.sundsvall.casedata.api.model.enums.CaseType.LOST_PARKING_PERMIT;
+import static se.sundsvall.casedata.api.model.enums.CaseType.PARKING_PERMIT;
+import static se.sundsvall.casedata.api.model.enums.CaseType.PARKING_PERMIT_RENEWAL;
 import static se.sundsvall.casedata.service.util.Constants.AD_USER_HEADER_KEY;
 import static se.sundsvall.casedata.service.util.Constants.X_JWT_ASSERTION_HEADER_KEY;
 
@@ -34,6 +34,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.UUID;
 
+import com.fasterxml.jackson.core.JsonProcessingException;
 import org.apache.commons.lang3.RandomStringUtils;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -44,8 +45,6 @@ import org.springframework.http.MediaType;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import org.springframework.web.util.UriComponentsBuilder;
 
-import com.fasterxml.jackson.core.JsonProcessingException;
-
 import se.sundsvall.casedata.Application;
 import se.sundsvall.casedata.api.model.DecisionDTO;
 import se.sundsvall.casedata.api.model.ErrandDTO;
@@ -53,7 +52,7 @@ import se.sundsvall.casedata.api.model.NoteDTO;
 import se.sundsvall.casedata.api.model.PatchErrandDTO;
 import se.sundsvall.casedata.api.model.StakeholderDTO;
 import se.sundsvall.casedata.integration.db.ErrandRepository;
-import se.sundsvall.casedata.integration.db.model.enums.StakeholderRole;
+import se.sundsvall.casedata.api.model.enums.StakeholderRole;
 import se.sundsvall.casedata.integration.db.model.enums.StakeholderType;
 import se.sundsvall.casedata.service.util.Constants;
 import se.sundsvall.dept44.test.annotation.wiremock.WireMockAppTestSuite;
@@ -155,6 +154,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.returnResult()
 			.getResponseBody();
 
+
 		// Create patch object
 		final PatchErrandDTO inputPatchErrandDTO = new PatchErrandDTO();
 		inputPatchErrandDTO.setDiaryNumber("A new patched diary number");
@@ -175,6 +175,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.expectBody(ErrandDTO.class)
 			.returnResult()
 			.getResponseBody();
+
 
 		// Update fields of the originally posted object, so we can compare with the patched object.
 		assertNotNull(resultPostErrandDTO);
@@ -200,10 +201,10 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -214,7 +215,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 
@@ -226,6 +227,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 				EXCLUDE_FIELDS)
 			.isEqualTo(result);
 	}
+
 
 	@Test
 	void testGetWithExtraParameter() {
@@ -239,11 +241,11 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				.queryParam("extraParameters[key 2]", "value 2")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					.queryParam("extraParameters[key 2]", "value 2")
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -254,7 +256,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 
@@ -276,12 +278,12 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				// One of the extra parameters is wrong
-				.queryParam("extraParameters[key 2]", "value 3")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					// One of the extra parameters is wrong
+					.queryParam("extraParameters[key 2]", "value 3")
+					.build())
 			.exchange()
 			.expectStatus().isNotFound();
 	}
@@ -297,12 +299,12 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("extraParameters[key 1]", "value 1")
-				// Filter is wrong
-				.queryParam("filter", "externalCaseId:'%s'".formatted(RandomStringUtils.randomNumeric(10)))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("extraParameters[key 1]", "value 1")
+					// Filter is wrong
+					.queryParam("filter", "externalCaseId:'%s'".formatted(RandomStringUtils.randomNumeric(10)))
+					.build())
 			.exchange()
 			.expectStatus().isNotFound();
 	}
@@ -318,14 +320,14 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		postErrand(inputPostErrandDTO);
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
-				.queryParam("extraParameters[key 1]", "value 1")
-				.queryParam("page", "0")
-				.queryParam("size", "10")
-				.queryParam("sort", "id,desc")
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO.getExternalCaseId()))
+					.queryParam("extraParameters[key 1]", "value 1")
+					.queryParam("page", "0")
+					.queryParam("size", "10")
+					.queryParam("sort", "id,desc")
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -336,7 +338,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 
@@ -354,18 +356,18 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		final String WORD_IN_THE_MIDDLE = "word-in-the-middle";
 
 		final ErrandDTO inputPostErrandDTO = createErrandDTO();
-		inputPostErrandDTO.getStakeholders().get(0).setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
+		inputPostErrandDTO.getStakeholders().getFirst().setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
 		postErrand(inputPostErrandDTO);
 
 		final ErrandDTO anotherErrandWithSameFirstName = createErrandDTO();
-		anotherErrandWithSameFirstName.getStakeholders().get(0).setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
+		anotherErrandWithSameFirstName.getStakeholders().getFirst().setFirstName(NAME_PREFIX + WORD_IN_THE_MIDDLE + RandomStringUtils.random(10));
 		postErrand(anotherErrandWithSameFirstName);
 
 		final Page<ErrandDTO> resultPage = webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "stakeholders.firstName ~ '*%s*'".formatted(WORD_IN_THE_MIDDLE))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "stakeholders.firstName ~ '*%s*'".formatted(WORD_IN_THE_MIDDLE))
+					.build())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -394,10 +396,10 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 	@Test
 	void testGetWithOneQueryParam404() {
 		webTestClient.get().uri(
-			uriBuilder -> uriBuilder
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(UUID.randomUUID()))
-				.build())
+				uriBuilder -> uriBuilder
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(UUID.randomUUID()))
+					.build())
 			.exchange()
 			.expectStatus().isNotFound()
 			.expectHeader().contentType(MediaType.APPLICATION_PROBLEM_JSON_VALUE);
@@ -417,24 +419,24 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO_1.getExternalCaseId()) +
-					"and " +
-					"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
-					"and " +
-					"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
-					"and " +
-					"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
-					"and " +
-					"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
-					"and " +
-					"applicationReceived:'%s'".formatted("{applicationReceived}") +
-					"and " +
-					"created:'%s'".formatted("{created}"))
-				.encode()
-				.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
-				.toUri())
+				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
+					.path("errands")
+					.queryParam("filter", "externalCaseId:'%s'".formatted(inputPostErrandDTO_1.getExternalCaseId()) +
+						"and " +
+						"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
+						"and " +
+						"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
+						"and " +
+						"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
+						"and " +
+						"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
+						"and " +
+						"applicationReceived:'%s'".formatted("{applicationReceived}") +
+						"and " +
+						"created:'%s'".formatted("{created}"))
+					.encode()
+					.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
+					.toUri())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -444,7 +446,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 		assertThat(inputPostErrandDTO_1)
@@ -471,25 +473,25 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.expectBody(ErrandDTO.class).returnResult().getResponseBody();
 
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", // Random UUID = no match, but uses operator "or" and should find an errand anyway.
-					"externalCaseId:'%s'".formatted(UUID.randomUUID()) +
-						"or " +
-						"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
-						"and " +
-						"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
-						"and " +
-						"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
-						"and " +
-						"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
-						"and " +
-						"applicationReceived:'%s'".formatted("{applicationReceived}") +
-						"and " +
-						"created:'%s'".formatted("{created}"))
-				.encode()
-				.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
-				.toUri())
+				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
+					.path("errands")
+					.queryParam("filter", // Random UUID = no match, but uses operator "or" and should find an errand anyway.
+						"externalCaseId:'%s'".formatted(UUID.randomUUID()) +
+							"or " +
+							"caseType:'%s'".formatted(inputPostErrandDTO_1.getCaseType()) +
+							"and " +
+							"priority:'%s'".formatted(inputPostErrandDTO_1.getPriority()) +
+							"and " +
+							"description:'%s'".formatted(inputPostErrandDTO_1.getDescription()) +
+							"and " +
+							"caseTitleAddition:'%s'".formatted(inputPostErrandDTO_1.getCaseTitleAddition()) +
+							"and " +
+							"applicationReceived:'%s'".formatted("{applicationReceived}") +
+							"and " +
+							"created:'%s'".formatted("{created}"))
+					.encode()
+					.buildAndExpand(inputPostErrandDTO_1.getApplicationReceived(), requireNonNull(resultPostErrandDTO_1).getCreated())
+					.toUri())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -500,7 +502,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertNotNull(result.getProcessId());
 		assertThat(inputPostErrandDTO_1)
@@ -515,7 +517,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 		final ErrandDTO inputPostErrandDTO_1 = createErrandDTO();
 		postErrand(inputPostErrandDTO_1);
 
-		final StakeholderDTO person = inputPostErrandDTO_1.getStakeholders().stream().filter(stakeholderDTO -> StakeholderType.PERSON.equals(stakeholderDTO.getType())).findFirst().orElseThrow();
+		final StakeholderDTO person = inputPostErrandDTO_1.getStakeholders().stream().filter(stakeholderDTO -> stakeholderDTO.getType().equals(StakeholderType.PERSON)).findFirst().orElseThrow();
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
@@ -539,7 +541,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertThat(inputPostErrandDTO_1)
 			.usingRecursiveComparison()
@@ -557,14 +559,14 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 
 		// Get only the first one with query params
 		final Page<ErrandDTO> resultList = webTestClient.get().uri(
-			uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
-				.path("errands")
-				.queryParam("filter", "stakeholders.addresses.street:'%s'".formatted(person.getAddresses().get(0).getStreet()) +
-					"and " +
-					"stakeholders.addresses.houseNumber:'%s'".formatted(person.getAddresses().get(0).getHouseNumber()))
-				.encode()
-				.build()
-				.toUri())
+				uriBuilder -> UriComponentsBuilder.fromUri(uriBuilder.build())
+					.path("errands")
+					.queryParam("filter", "stakeholders.addresses.street:'%s'".formatted(person.getAddresses().getFirst().getStreet()) +
+						"and " +
+						"stakeholders.addresses.houseNumber:'%s'".formatted(person.getAddresses().getFirst().getHouseNumber()))
+					.encode()
+					.build()
+					.toUri())
 			.exchange()
 			.expectStatus().isOk()
 			.expectHeader().contentType(APPLICATION_JSON_VALUE)
@@ -575,7 +577,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertThat(inputPostErrandDTO_1)
 			.usingRecursiveComparison()
@@ -631,7 +633,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertThat(inputPostErrandDTO_1)
 			.usingRecursiveComparison()
@@ -666,7 +668,7 @@ class ErrandResourceIT extends CustomAbstractAppTest {
 			.getResponseBody();
 
 		assertEquals(1, requireNonNull(resultList).getTotalElements());
-		final ErrandDTO result = resultList.getContent().get(0);
+		final ErrandDTO result = resultList.getContent().getFirst();
 
 		assertThat(errandDto)
 			.usingRecursiveComparison()
